python/ql/test/extractor-tests/syntax_error/illegal_context.py
#Illegal use of rhs expression of lhs
[x for a in b] = y